# chesstalk-0mqpubsub-module

./: ChangeLog  Makefile.am  README  configure.ac  run-0mqpubsub-module.sh
doc/: pub.txt
module/0mqpubsub/: Makefile.am  module_0mqpubsub.c
src/: Makefile.am  publication-subscription.xml  publish-move.c  run-subscription-forwarder.sh
