
lib_LTLIBRARIES = libchesstalk_0mqpubsub.la

AM_CFLAGS = -Wall

include_HEADERS = 
libchesstalk_0mqpubsub_la_DEFINES = 
libchesstalk_0mqpubsub_la_SOURCES = module_0mqpubsub.c $(top_srcdir)/src/zhelpers.h
libchesstalk_0mqpubsub_la_CFLAGS = $(AM_CFLAGS) $(ZMQ_CFLAGS) -I$(top_srcdir)/src
libchesstalk_0mqpubsub_la_LDFLAGS = -version-info 0:98:0 
libchesstalk_0mqpubsub_la_LIBADD = $(ZMQ_LIBS)

